# objectives/models.py
@@ -1,0 +1,14 @@
+from django.db import models
+
+
+class Objective(models.Model):
+    POSIBLE_OBJECTIVE = [
+        ('S', 'Salut'),
+        ('Fr', 'Força'),
+        ('P', 'Perdua'),
+        ('Fl', 'Flexibilitat'),
+        ('Rs', 'Resistencia'),
+        ('Rc', 'Recuperacio'),
+        ('A', 'Agilitat')
+    ]
+    objective = models.CharField(max_length=100, choices=POSIBLE_OBJECTIVE, default='S', unique=True)
