# objectives/serializers.py
@@ -1,0 +1,8 @@
+from rest_framework import serializers
+from objectives.models import Objective
+
+
+class ObjectiveSerializer(serializers.ModelSerializer):
+    class Meta:
+        model = Objective
+        fields = '__all__'
