# openapi.yml
@@ -122,7 +122,6 @@ paths:
           description: "Operació exitosa"
         "400":
           description: "Credencials incorrectes"
-
   /user/{id}:
     get:
       tags:
@@ -255,6 +254,302 @@ paths:
        "404":
          description: "User not found"
 
+  /activities:
+    post:
+      tags:
+        - "activity"
+      summary: "Crear activitat"
+      description: "Crear una activitat a la BD"
+      operationId: "createActivity"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "type"
+          in: "query"
+          type: "string"
+          enum: [ E,C ]
+        - name: "name"
+          in: "query"
+          type: "string"
+          maxLength: 30
+        - name: "description"
+          in: "query"
+          type: "string"
+          maxLength: 200
+        - name: "age"
+          in: "query"
+          type: "string"
+          enum: [ K,T,A,E ]
+        - name: "difficulty"
+          in: "query"
+          type: "string"
+          enum: [ E,M,H ]
+        - name: "categories"
+          in: "query"
+          type: "string"
+      responses:
+        "200":
+          description: "Operació exitosa"
+        "400":
+          description: "Activitat ja existeix"
+  /activities/{id}:
+    get:
+      tags:
+        - "activity"
+      summary: "Obtenir informació de l'activitat"
+      description: ""
+      operationId: "getActById"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "Id de l'activitat"
+          required: true
+          type: "string"
+      responses:
+        "200":
+          description: "Operació exitosa"
+          schema:
+            $ref: "#/definitions/Activity"
+        "400":
+          description: "Alguna cosa no ha anat bé..."
+
+  /categories:
+    post:
+      tags:
+        - "category"
+      summary: "Crear categoria"
+      description: "Crear una categoria a la BD"
+      operationId: "createCategory"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "category"
+          in: "query"
+          type: "string"
+          enum: [ S,C,Y,E,R,P ]
+      responses:
+        "200":
+          description: "Operació exitosa"
+        "400":
+          description: "Categoria ja existeix"
+  /categories/{id}:
+    get:
+      tags:
+        - "category"
+      summary: "Obtenir informació de la categoria"
+      description: ""
+      operationId: "getCatById"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "Id de la categoria"
+          required: true
+          type: "string"
+      responses:
+        "200":
+          description: "Operació exitosa"
+          schema:
+            $ref: "#/definitions/Category"
+        "400":
+          description: "Alguna cosa no ha anat bé..."
+
+  /classes:
+    post:
+      tags:
+        - "class"
+      summary: "Crear classe"
+      description: "Crear una classe a la BD"
+      operationId: "createClass"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "activity"
+          in: "query"
+          type: "string"
+        - name: "trainer"
+          in: "query"
+          type: "string"
+        - name: "workarea"
+          in: "query"
+          type: "string"
+          enum: [UB,LB,FB,C]
+      responses:
+        "200":
+          description: "Operació exitosa"
+        "400":
+          description: "Classe ja existeix"
+  /classes/{id}:
+    get:
+      tags:
+        - "class"
+      summary: "Obtenir informació de la classe"
+      description: ""
+      operationId: "getClassById"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "Id de la classe"
+          required: true
+          type: "string"
+      responses:
+        "200":
+          description: "Operació exitosa"
+          schema:
+            $ref: "#/definitions/Class"
+        "400":
+          description: "Alguna cosa no ha anat bé..."
+
+  /exercises:
+    post:
+      tags:
+        - "exercise"
+      summary: "Crear exercici"
+      description: "Crear un exercici a la BD"
+      operationId: "createExercise"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "activity"
+          in: "query"
+          type: "string"
+        - name: "muscle"
+          in: "query"
+          type: "string"
+          enum: [ Bi,Tr,Fa,Ch,Sh,Do,Gl,Fe,Qu,Cm,Co]
+      responses:
+        "200":
+          description: "Operació exitosa"
+        "400":
+          description: "Exercici ja existeix"
+  /exercises/{id}:
+    get:
+      tags:
+        - "exercise"
+      summary: "Obtenir informació de l'exercici"
+      description: ""
+      operationId: "getExerById"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "Id de l'exercici"
+          required: true
+          type: "string"
+      responses:
+        "200":
+          description: "Operació exitosa"
+          schema:
+            $ref: "#/definitions/Exercise"
+        "400":
+          description: "Alguna cosa no ha anat bé..."
+
+  /objectives:
+    post:
+      tags:
+        - "objective"
+      summary: "Crear objectiu"
+      description: "Crear un objectiu a la BD"
+      operationId: "createObjective"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "objective"
+          in: "query"
+          type: "string"
+          enum: [ S,Fr,P,Fl,Rs,Rc,A ]
+      responses:
+        "200":
+          description: "Operació exitosa"
+        "400":
+          description: "Objectiu ja existeix"
+  /objectives/{id}:
+    get:
+      tags:
+        - "objective"
+      summary: "Obtenir informació de l'objectiu"
+      description: ""
+      operationId: "getObjById"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "Id de l'objectiu"
+          required: true
+          type: "string"
+      responses:
+        "200":
+          description: "Operació exitosa"
+          schema:
+            $ref: "#/definitions/Objective"
+        "400":
+          description: "Alguna cosa no ha anat bé..."
+
+  /routines:
+    post:
+      tags:
+        - "routine"
+      summary: "Crear rutina"
+      description: "Crear un rutina a la BD"
+      operationId: "createRoutine"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "name"
+          in: "query"
+          type: "string"
+        - name: "description"
+          in: "query"
+          type: "string"
+        - name: "time"
+          in: "query"
+          type: "string"
+          enum: [ P,R,F ]
+        - name: "categories"
+          in: "query"
+          type: "string"
+        - name: "exercises"
+          in: "query"
+          type: "string"
+        - name: "classes"
+          in: "query"
+          type: "string"
+      responses:
+        "200":
+          description: "Operació exitosa"
+        "400":
+          description: "Rutina ja existeix"
+  /routines/{id}:
+    get:
+      tags:
+        - "routine"
+      summary: "Obtenir informació de la rutina"
+      description: ""
+      operationId: "getRoutineById"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "Id de la rutina"
+          required: true
+          type: "string"
+      responses:
+        "200":
+          description: "Operació exitosa"
+          schema:
+            $ref: "#/definitions/Routine"
+        "400":
+          description: "Alguna cosa no ha anat bé..."
+
+
 #securityDefinitions:
  # petstore_auth:
  #   type: "oauth2"
@@ -349,6 +644,84 @@ definitions:
       igc:
         type: "integer"
         default: 0
+
+  Activity:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      type:
+        type: "string"
+        enum: [E,C]
+      name:
+        type: "string"
+        maxLength: 30
+      description:
+        type: "string"
+        maxLength: 200
+      age:
+        type: "string"
+        enum: [K,T,A,E]
+      difficulty:
+        type: "string"
+        enum: [E,M,H]
+      length:
+        type: "integer"
+      categories:
+        type: "string"
+        maxLength: 200
+
+  Category:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      category:
+        type: "string"
+        enum: [ S,C,Y,E,R,P ]
+
+  Class:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      activity:
+        type: "string"
+      trainer:
+        type: "string"
+        maxLength: 30
+      workearea:
+        type: "string"
+        enum: [ UB,LB,FB,C ]
+
+  Exercise:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      activity:
+        type: "string"
+      muscle:
+        type: "string"
+        enum: [ Bi,Tr,Fa,Ch,Sh,Do,Gl,Fe,Qu,Cm,Co ]
+
+  Objective:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      objective:
+        type: "string"
+        enum: [ S,Fr,P,Fl,Rs,Rc,A ]
+
+
+
+
   #ApiResponse:
   #  type: "object"
   #  properties:
